--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -49,6 +49,6 @@
             }
           </style>
           <a id="logo" href="{{ .Site.Home.RelPermalink | default ("/" | relLangURL) }}">
-            <img src="/images/logo.png" alt="Logo no cargado">
+            <img src="{{ .Site.BaseURL }}images/logo.png" alt="Logo no cargado">
             
           </a>
